# vsbtc

./: Cargo.toml  README.md
.github/workflows/: release.yml
assets/linux/: vsbtc.desktop
assets/macos/: Info.plist
src/: main.rs
src/analysis/: engine.rs
src/feeds/: hyperliquid.rs  mod.rs  types.rs
src/store/: database.rs
src/ui/: app.rs  mod.rs
