[package]
name = "cryptoscreener"
version = "0.1.0"
edition = "2024"
description = "Real-time crypto volatility screener powered by Hyperliquid"

[dependencies]
# UI
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["syntect"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Platform directories
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"
