[package]
name = "vsbtc"
version = "0.2.0"
edition = "2024"
description = "Real-time crypto relative strength screener vs BTC — powered by Hyperliquid"

[dependencies]
# UI
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["syntect"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Platform directories
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# Image (for icon loading)
image = { version = "0.25", default-features = false, features = ["png"] }

# Open URLs in default browser
open = "5"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
